Parse mod metadata and display mod names

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
 iced = "0.10.0"
+quick-xml = { version = "0.31.0", features = ["serialize"] }
 rand = "0.8.5"
+serde = { version = "1.0.193", features = ["derive"] }
