--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+directories = "5.0.1"
 iced = "0.10.0"
 quick-xml = { version = "0.31.0", features = ["serialize"] }
 rand = "0.8.5"
+rfd = "0.12.1"
 serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
