--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "icy-isaac-mod-manager"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/Raoul1808/icy-isaac-mod-manager"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
