--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "icy-isaac-mod-manager"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 repository = "https://github.com/Raoul1808/icy-isaac-mod-manager"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[profile.release]
+strip = true
+lto = true
 
 [dependencies]
 anyhow = "1.0.75"
